# hprof-visualizer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
crates/hprof-api/: Cargo.toml
crates/hprof-cli/: Cargo.toml
crates/hprof-cli/src/: config.rs  main.rs  progress.rs  splash.rs
crates/hprof-engine/: Cargo.toml
crates/hprof-engine/src/: engine.rs  engine_impl.rs  lib.rs  pagination.rs  resolver.rs
crates/hprof-engine/src/cache/: budget.rs  lru.rs  mod.rs  system_memory.rs
crates/hprof-engine/src/engine_impl/: mod.rs  tests.rs
crates/hprof-engine/src/pagination/: background_walker.rs  mod.rs  skip_index.rs  tests.rs
crates/hprof-parser/: Cargo.toml
crates/hprof-parser/benches/: first_pass.rs
crates/hprof-parser/src/: error.rs  format.rs  header.rs  heap_reader.rs  hprof_file.rs  id.rs  java_types.rs  lib.rs  mmap.rs  reader.rs  record.rs  resolution.rs  strings.rs  tags.rs  test_utils.rs  types.rs  visitor.rs
crates/hprof-parser/src/indexer/: first_pass.rs  mod.rs  precise.rs  segment.rs  validation.rs
crates/hprof-parser/src/indexer/first_pass/: heap_extraction.rs  hprof_primitives.rs  mod.rs  offset_lookup.rs  record_scan.rs  tests.rs  thread_resolution.rs
crates/hprof-tui/: Cargo.toml
crates/hprof-tui/src/: app.rs  favorites.rs  input.rs  keymap.rs  lib.rs  progress.rs  theme.rs  warnings.rs
crates/hprof-tui/src/app/: mod.rs  tests.rs
crates/hprof-tui/src/views/: cursor.rs  favorites_panel.rs  help_bar.rs  mod.rs  stack_view.rs  status_bar.rs  thread_list.rs  tree_render.rs
crates/hprof-tui/src/views/favorites_panel/: mod.rs  tests.rs
crates/hprof-tui/src/views/stack_view/: expansion.rs  format.rs  mod.rs  state.rs  tests.rs  types.rs  widget.rs
crates/hprof-tui/src/views/tree_render/: collection.rs  expansion.rs  helpers.rs  mod.rs  tests.rs  variable.rs
docs/brainstorming/: brainstorming-session-2026-03-06-1000.md
docs/code-review/: claude-cyclic-ref-detection-code-review.md  claude-impl-progress-observer-trait.md  claude-refactor-first-pass-modules-code-review.md  claude-story-1-1-workspace-setup-and-ci-pipeline.md  claude-story-1-3-code-review.md  claude-story-10-1-code-review-2026-03-14.md  claude-story-10-2-chunked-heap-segment-extraction.md  claude-story-10-4-code-review.md  claude-story-11-4-code-review.md  claude-story-11.5-skip-index-variable-size.md  claude-story-13-0-progress-bar-per-segment.md  claude-story-13.5-adversarial-review.md  claude-story-2-1-code-review.md  claude-story-2-3-first-pass-indexer-with-precise-indexes.md  claude-story-2-4-code-review.md  claude-story-2-6-code-review.md  claude-story-3.4-code-review.md  claude-story-3.5-code-review.md  claude-story-3.6-code-review.md  claude-story-3.7-code-review.md  claude-story-3.8-code-review-consolidated.md  claude-story-3.8-code-review.md  claude-story-4.1-collection-pagination-engine.md  claude-story-4.2-inline-values-post-review.md  claude-story-4.2-paginated-collection-view.md  claude-story-5-1-memorysize-trait-and-budget-tracking.md  claude-story-5-3-lru-eviction-core.md  claude-story-8-0-code-review.md  claude-story-8-1.md  claude-story-8-2-lazy-string-references.md  claude-story-8-3-parallel-heap-parsing.md  claude-story-9-1-9-2-failed-resolve-adversarial-review.md  claude-story-9-11-code-review.md  claude-story-9-5-adversarial-review.md  claude-story-9-6-adversarial-review.md  claude-story-9-8-adversarial-review.md  claude-story-9-9-adversarial-review.md  claude-tech-spec-cyclic-ref-detection.md  claude-tech-spec-navigation-path-replace-stack-cursor.md  claude-tech-spec-progress-observer-trait.md  (+35 more)
docs/implementation-artifacts/: 1-1-workspace-setup-and-ci-pipeline.md  1-2-error-types-and-test-builder.md  1-3-hprof-header-parsing-and-mmap-file-access.md  10-1-progress-fidelity-heap-segment-scan.md  10-2-split-oversized-heap-segments.md  10-3-memory-guard-budget-bytes-extract-all.md  10-4-investigate-post-extraction-ram-spike.md  11-3-parallel-eager-item-resolution.md  11-4-skip-index-object-array.md  11-5-skip-index-variable-size.md  12-1-path-based-expand-state-isolation.md  13-0-progress-bar-intra-segment.md  13-2-enhanced-favorites-navigation.md  13-5-azerty-qwerty-keymapping.md  2-1-record-header-parsing-id-utility-and-unknown-record-skip.md  2-2-structural-record-parsing.md  2-3-first-pass-indexer-with-precise-indexes.md  2-4-tolerant-indexing.md  2-5-segment-level-binaryfuse8-filters.md  2-6-indexing-progress-bar.md  3-1-navigation-engine-trait-and-engine-factory.md  3-2-thread-list-and-search-in-tui.md  3-3-stack-frame-and-local-variable-display.md  3-4-object-resolution-and-single-level-expansion.md  3-5-recursive-expansion-and-collection-size-indicators.md  3-6-lazy-value-string-loading.md  3-7-real-thread-names-and-local-variable-resolution.md  3-8-inline-filters-and-optimized-thread-resolution.md  4-1-collection-pagination-engine.md  4-2-paginated-collection-view-and-keyboard-navigation.md  5-1-memorysize-trait-and-budget-tracking.md  5-2-memory-budget-auto-calculation-and-override.md  5-3-lru-eviction-core.md  7-1-favorites-panel.md  (+38 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_first_pass.rs  fuzz_parse_header.rs  fuzz_string_parsing.rs
tools/: sanitize_hprof.py
(+64 files in other folders)
