[workspace]
members = [
    "crates/hprof-api",
    "crates/hprof-parser",
    "crates/hprof-engine",
    "crates/hprof-tui",
    "crates/hprof-cli",
]
resolver = "2"

[profile.bench]
debug = true

# Optimize the parser and its hot-path dependencies even in dev
# builds. Without this, millions of unoptimized read_u8/read_u32
# calls make debug-mode loading of large dumps ~2× slower.
# Standard Rust practice (cf. bevy, servo).
[profile.dev.package.hprof-parser]
opt-level = 2
[profile.dev.package.byteorder]
opt-level = 2
[profile.dev.package.memmap2]
opt-level = 2
[profile.dev.package.rayon]
opt-level = 2
[profile.dev.package.rayon-core]
opt-level = 2
[profile.dev.package.rustc-hash]
opt-level = 2
[profile.dev.package.xorf]
opt-level = 2

[workspace.dependencies]
thiserror = "2"
memmap2 = "0.9"
byteorder = "1"
xorf = "0.11"
rayon = "1"
indicatif = "0.17"
ratatui = "0.30"
crossterm = "0.29"
rustc-hash = "2"
