[package]
name = "hprof-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hprof-visualizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
hprof-api    = { path = "../hprof-api" }
hprof-engine = { path = "../hprof-engine" }
hprof-tui    = { path = "../hprof-tui" }
indicatif    = { workspace = true }
tracing = { version = "0.1", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tracing-appender = { version = "0.2", optional = true }

[features]
dev-profiling = [
    "hprof-engine/dev-profiling",
    "hprof-tui/dev-profiling",
    "dep:tracing",
    "dep:tracing-chrome",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
]

[dev-dependencies]
tempfile = "3"
