[package]
name = "hprof-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1"
rayon = { workspace = true }
rustc-hash = { workspace = true }
tracing = { version = "0.1", optional = true }
hprof-api = { path = "../hprof-api" }
hprof-parser = { path = "../hprof-parser" }

[features]
dev-profiling = ["hprof-parser/dev-profiling", "dep:tracing"]

[dev-dependencies]
tempfile = "3"
hprof-api = { path = "../hprof-api", features = ["test-utils"] }
hprof-parser = { path = "../hprof-parser", features = ["test-utils"] }
