[package]
name = "hprof-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
hprof-api = { path = "../hprof-api" }
thiserror = { workspace = true }
memmap2 = { workspace = true }
byteorder = { workspace = true }
xorf = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
hprof-api = { path = "../hprof-api", features = ["test-utils"] }

[features]
test-utils = []
dev-profiling = ["dep:tracing"]

[[bench]]
name = "first_pass"
harness = false
