[package]
name = "hprof-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
hprof-engine = { path = "../hprof-engine" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { version = "0.1", optional = true }

[features]
dev-profiling = ["hprof-engine/dev-profiling", "dep:tracing"]
